--- a/main.css
+++ b/main.css
@@ -29,6 +29,13 @@ a {
     text-decoration:none;
 }
 
-h1 {
-    text-align:center;
+#content {
+    padding-top:80px;
+}
+
+.title {
+    position: fixed;
+    text-align: center;
+    width: 100%;
+    background:#FFF;
 }
